--- a/index.html
+++ b/index.html
@@ -1704,6 +1704,30 @@ body.menu-open .menu-fab {
   pointer-events: none;
 }
 
+.menu-fab {
+  display: flex;
+  flex-direction: column;    /* stack the two lines */
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 10px 12px;        /* enough space for two lines */
+  height: 80px;              /* adjust if needed */
+}
+
+.fab-main {
+  font-size: 1.1rem;
+  font-weight: 600;
+  line-height: 1.2;
+}
+
+.fab-note {
+  font-size: 0.8rem;
+  margin-top: 2px;
+  opacity: 0.9;
+  line-height: 1.2;
+}
+
+
 /* Back-to-top button above sticky bar but below modals */
 #backToTop {
   z-index: 1600 !important;
@@ -1860,6 +1884,71 @@ body.overlay-open {
   box-sizing: border-box;
 }
 
+/* Outer spacing */
+.payment-section {
+  padding: 40px 16px;
+  margin-bottom: 200px;
+}
+
+/* Matches your FIND US card container */
+.payment-card {
+  background: rgba(255, 255, 255, 0.8);
+  border-radius: 20px;
+  padding: 24px 28px 32px;
+  margin: 0 auto;
+  max-width: 1200px;
+
+  /* Top + bottom border */
+
+
+  /* Shadow same as your other cards */
+  box-shadow: 0 10px 30px rgba(0,0,0,0.25);
+}
+
+/* Slight indentation like FIND US */
+.payment-title {
+  font-size: 1.6rem;
+  font-weight: bold;
+  margin: 0 0 12px;
+  padding-left: 1px;    /* ≈ indentation of FIND US */
+  text-transform: uppercase;
+}
+
+/* Message formatting */
+.payment-message {
+  margin: 0 0 22px;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: var(--muted);
+}
+
+/* Icon layout */
+.payment-icons {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 12px;
+}
+
+/* Icon tile design (matches your aesthetic) */
+.payment-icon {
+  width: 80px;
+  height: 50px;
+  padding: 4px;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.payment-icon img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+
 
 </style>
 
@@ -1923,6 +2012,7 @@ body.overlay-open {
         <li><a href="#allergens">Allergens</a></li>
         <!-- IMPORTANT: id="menu-link" for the popup JS -->
         <li><a href="#menu" id="menu-link">Menu</a></li>
+		<a href="#payments">Payments</a>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -1957,7 +2047,7 @@ body.overlay-open {
         <!-- About -->
         <!--<div class="card-spacer">-->
 		<div class="card" id="about" style="margin-top:8px">
-          <h2>About Rung's Thai Kitchen</h2>
+          <h2>ABOUT RUNG'S THAI KITCHEN</h2>
           <p class="muted">
             Welcome to Rung's Thai Kitchen, where I take pride in delivering authentic Thai takeaway food right to your doorstep in Leeds.</p>
 			<p class="muted"> My culinary journey began with a passion for traditional Thai recipes handed down through generations. I believe that the secret to great Thai cuisine lies in using fresh, high-quality ingredients and a careful balance of flavours. Each dish is crafted with love and dedication, ensuring that you experience the vibrant and aromatic taste of Thailand in every bite.</p>
@@ -1974,7 +2064,7 @@ body.overlay-open {
         <!-- Our Food -->
         <!--<div class="card-spacer">-->
 		<div class="card" id="our-food" style="margin-top:8px">
-          <h2>Our Food</h2>
+          <h2>OUR FOOD</h2>
           <div style="display:flex;gap:1px;align-items:flex-start;flex-wrap:wrap">
             <div style="flex:1 1 320px;min-width:240px">
               <p class="muted">
@@ -2002,7 +2092,7 @@ body.overlay-open {
         <!-- Allergens -->
         <!--<div class="card-spacer">-->
 		<div class="card" id="allergens" style="margin-top:14px">
-          <h2 style="margin-bottom:10px">Allergens & Ingredients</h2>
+          <h2 style="margin-bottom:10px">ALLERGENS & INGREDIENTS</h2>
           <p class="muted">
             We take food allergies seriously. Many of our dishes can be prepared without certain allergens — please
             mention any allergies when placing your order. The icons below indicate that dishes contain:
@@ -2031,7 +2121,7 @@ body.overlay-open {
       <!-- Right column: Order -->
       <aside>
         <div class="card" id="order-panel">
-          <h2>Your Order</h2>
+          <h2>YOUR ORDER</h2>
           <div id="order-list" class="order-list" style="margin-top:12px">
             <div class="muted small">No items yet — add something from the menu.</div>
           </div>
@@ -2048,7 +2138,7 @@ body.overlay-open {
 	<section id="location-card">
   <div class="location-inner">
     <div class="location-text">
-      <h3>Find Us</h3>
+      <h3>FIND US</h3>
       <p class="muted">
         30 Topcliffe Mews<br>
         Morley<br>
@@ -2065,6 +2155,26 @@ body.overlay-open {
 
     <div class="location-map-wrapper">
       <div id="delivery-map"></div>
+    </div>
+  </div>
+</section>
+
+
+<section id="payments" class="payment-section">
+  <div class="payment-card">
+    <h3 class="payment-title">ACCEPTED PAYMENT METHODS</h3>
+
+    <p class="payment-message">
+      We’re working hard to bring secure online payments to the website as soon as possible.<br>
+      In the meantime, you can pay by <strong>cash or card on collection or delivery</strong>.
+    </p>
+
+    <div class="payment-icons">
+      <div class="payment-icon"><img src="Images/payment/Cash.svg" alt="Cash"></div>
+      <div class="payment-icon"><img src="Images/payment/Visa.svg" alt="Visa"></div>
+      <div class="payment-icon"><img src="Images/payment/Mastercard.svg" alt="Mastercard"></div>
+      <div class="payment-icon"><img src="Images/payment/apple pay.svg" alt="Apple Pay"></div>
+      <div class="payment-icon"><img src="Images/payment/G Pay.svg" alt="Google Pay"></div>
     </div>
   </div>
 </section>
@@ -2383,7 +2493,10 @@ body.overlay-open {
 			</button>
 		  </div>
 		</div>
-		<button id="menu-fab" class="menu-fab" type="button" aria-label="Open menu">View Menu & Place Order</button>
+		<button id="menu-fab" class="menu-fab" type="button" aria-label="Open menu">
+  <span class="fab-main">View Menu & Place Order</span>
+</button>
+
 		<button id="menu-fab" class="menu-fab hidden" type="button" aria-label="Open menu">Menu</button>
 		
 		<link
