--- a/index.html
+++ b/index.html
@@ -2170,11 +2170,11 @@ body.overlay-open {
     </p>
 
     <div class="payment-icons">
-      <div class="payment-icon"><img src="Images/payment/Cash.svg" alt="Cash"></div>
-      <div class="payment-icon"><img src="Images/payment/Visa.svg" alt="Visa"></div>
-      <div class="payment-icon"><img src="Images/payment/Mastercard.svg" alt="Mastercard"></div>
-      <div class="payment-icon"><img src="Images/payment/apple pay.svg" alt="Apple Pay"></div>
-      <div class="payment-icon"><img src="Images/payment/G Pay.svg" alt="Google Pay"></div>
+      <div class="payment-icon"><img src="Images/payment/Cash.svg" alt="Cash?v=2"></div>
+      <div class="payment-icon"><img src="Images/payment/Visa.svg" alt="Visa?v=2"></div>
+      <div class="payment-icon"><img src="Images/payment/Mastercard.svg" alt="Mastercard?v=2"></div>
+      <div class="payment-icon"><img src="Images/payment/apple pay.svg" alt="Apple Pay?v=2"></div>
+      <div class="payment-icon"><img src="Images/payment/G Pay.svg" alt="Google Pay?v=2"></div>
     </div>
   </div>
 </section>
