--- a/index.html
+++ b/index.html
@@ -1899,7 +1899,8 @@ body.overlay-open {
   max-width: 1200px;
 
   /* Top + bottom border */
-
+  border-top: 20px solid rgba(255, 255, 255, 0.25);
+  border-bottom: 20px solid rgba(255, 255, 255, 0.25);
 
   /* Shadow same as your other cards */
   box-shadow: 0 10px 30px rgba(0,0,0,0.25);
@@ -2170,11 +2171,11 @@ body.overlay-open {
     </p>
 
     <div class="payment-icons">
-      <div class="payment-icon"><img src="Images/payment/cash.svg" alt="Cash?v=2"></div>
-      <div class="payment-icon"><img src="Images/payment/visa.svg" alt="Visa?v=2"></div>
-      <div class="payment-icon"><img src="Images/payment/mastercard.svg" alt="Mastercard?v=2"></div>
-      <div class="payment-icon"><img src="Images/payment/apple_pay.svg" alt="Apple Pay?v=2"></div>
-      <div class="payment-icon"><img src="Images/payment/gpay.svg" alt="Google Pay?v=2"></div>
+      <div class="payment-icon"><img src="Images/payment/cash.svg" alt="Cash"></div>
+      <div class="payment-icon"><img src="Images/payment/visa.svg" alt="Visa"></div>
+      <div class="payment-icon"><img src="Images/payment/mastercard.svg" alt="Mastercard"></div>
+      <div class="payment-icon"><img src="Images/payment/apple_pay.svg?v=2" alt="Apple Pay"></div>
+      <div class="payment-icon"><img src="Images/payment/gpay.svg?v=2" alt="Google Pay"></div>
     </div>
   </div>
 </section>
