--- a/index.html
+++ b/index.html
@@ -2171,11 +2171,11 @@ body.overlay-open {
     </p>
 
     <div class="payment-icons">
-      <div class="payment-icon"><img src="Images\payment\cash.svg" alt="Cash"></div>
-      <div class="payment-icon"><img src="Images\payment\visa.svg" alt="Visa"></div>
-      <div class="payment-icon"><img src="Images\payment\mastercard.svg" alt="Mastercard"></div>
-      <div class="payment-icon"><img src="Images\payment\apple_pay.svg?v=2" alt="Apple Pay"></div>
-      <div class="payment-icon"><img src="Images\payment\gpay.svg?v=2" alt="Google Pay"></div>
+      <div class="payment-icon"><img src="images\payment\cash.svg" alt="Cash"></div>
+      <div class="payment-icon"><img src="images\payment\visa.svg" alt="Visa"></div>
+      <div class="payment-icon"><img src="images\payment\mastercard.svg" alt="Mastercard"></div>
+      <div class="payment-icon"><img src="images\payment\apple_pay.svg?v=2" alt="Apple Pay"></div>
+      <div class="payment-icon"><img src="images\payment\gpay.svg?v=2" alt="Google Pay"></div>
     </div>
   </div>
 </section>
