--- a/index.html
+++ b/index.html
@@ -1908,11 +1908,10 @@ body.overlay-open {
 
 /* Slight indentation like FIND US */
 .payment-title {
-  font-size: 1.6rem;
+  font-size: 1.17rem;
   font-weight: bold;
   margin: 0 0 12px;
   padding-left: 1px;    /* ≈ indentation of FIND US */
-  text-transform: uppercase;
 }
 
 /* Message formatting */
@@ -2013,7 +2012,7 @@ body.overlay-open {
         <li><a href="#allergens">Allergens</a></li>
         <!-- IMPORTANT: id="menu-link" for the popup JS -->
         <li><a href="#menu" id="menu-link">Menu</a></li>
-		<a href="#payments">Payments</a>
+		<li><a href="#payments">Payments</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -2048,7 +2047,7 @@ body.overlay-open {
         <!-- About -->
         <!--<div class="card-spacer">-->
 		<div class="card" id="about" style="margin-top:8px">
-          <h2>ABOUT RUNG'S THAI KITCHEN</h2>
+          <h3>About Rung's Thai Kitchen</h3>
           <p class="muted">
             Welcome to Rung's Thai Kitchen, where I take pride in delivering authentic Thai takeaway food right to your doorstep in Leeds.</p>
 			<p class="muted"> My culinary journey began with a passion for traditional Thai recipes handed down through generations. I believe that the secret to great Thai cuisine lies in using fresh, high-quality ingredients and a careful balance of flavours. Each dish is crafted with love and dedication, ensuring that you experience the vibrant and aromatic taste of Thailand in every bite.</p>
@@ -2065,7 +2064,7 @@ body.overlay-open {
         <!-- Our Food -->
         <!--<div class="card-spacer">-->
 		<div class="card" id="our-food" style="margin-top:8px">
-          <h2>OUR FOOD</h2>
+          <h3>Our Food</h3>
           <div style="display:flex;gap:1px;align-items:flex-start;flex-wrap:wrap">
             <div style="flex:1 1 320px;min-width:240px">
               <p class="muted">
@@ -2093,7 +2092,7 @@ body.overlay-open {
         <!-- Allergens -->
         <!--<div class="card-spacer">-->
 		<div class="card" id="allergens" style="margin-top:14px">
-          <h2 style="margin-bottom:10px">ALLERGENS & INGREDIENTS</h2>
+          <h3 style="margin-bottom:10px">Allergens & Ingredients</h3>
           <p class="muted">
             We take food allergies seriously. Many of our dishes can be prepared without certain allergens — please
             mention any allergies when placing your order. The icons below indicate that dishes contain:
@@ -2122,7 +2121,7 @@ body.overlay-open {
       <!-- Right column: Order -->
       <aside>
         <div class="card" id="order-panel">
-          <h2>YOUR ORDER</h2>
+          <h3>Your Order</h3>
           <div id="order-list" class="order-list" style="margin-top:12px">
             <div class="muted small">No items yet — add something from the menu.</div>
           </div>
@@ -2139,7 +2138,7 @@ body.overlay-open {
 	<section id="location-card">
   <div class="location-inner">
     <div class="location-text">
-      <h3>FIND US</h3>
+      <h3>Find Us</h3>
       <p class="muted">
         30 Topcliffe Mews<br>
         Morley<br>
@@ -2163,7 +2162,7 @@ body.overlay-open {
 
 <section id="payments" class="payment-section">
   <div class="payment-card">
-    <h3 class="payment-title">ACCEPTED PAYMENT METHODS</h3>
+    <h3 class="payment-title">Accepted Payment Methods</h3>
 
     <p class="payment-message">
       We’re working hard to bring secure online payments to the website as soon as possible.<br>
