Corrected spelling on fried egg

--- a/index.html
+++ b/index.html
@@ -2635,7 +2635,7 @@ const EXTRAS = [
         { id: 'sticky-rice', name: 'Sticky Rice (Khao Neow)', desc: 'Perfect sticky jasmine rice.', price: 2.50, img: 'images/stickyrice.jpg', allergens: [] },
         { id: 'coconut-ricee', name: 'Coconut Rice (Khao Man)', desc: 'Jasmine rice simmered in coconut milk.', price: 3.00, img: 'images/coconutrice.jpg', allergens: [] },
 		 { id: 'chips', name: 'Chips', desc: 'Deep fried chips. Because sometimes you just need them!', price: 3.00, img: 'images/chips.jpg', allergens: [] },
-		 { id: 'fried-egg', name: 'Fried egg', desc: 'Thai style fried eggs have crispy whites with a soft yolk. But please let us kmow how you like yours', price: 1.00, img: 'images/egg.jpg', allergens: ['egg'] }
+		 { id: 'fried-egg', name: 'Fried egg', desc: 'Thai style fried eggs have crispy whites with a soft yolk. But please let us know how you like yours', price: 1.00, img: 'images/egg.jpg', allergens: ['egg'] }
       ]},
       { id:'drinks',    title:'Soft Drinks', allowExtras:false, items:[
         { id: 'pepsi-max', name: 'Pepsi Max', price: 1.50, img: 'images/pepsimax1.jpg', allergens: [] },
@@ -5131,3 +5131,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
