Changed product name of Fanta

--- a/index.html
+++ b/index.html
@@ -2641,7 +2641,7 @@ const EXTRAS = [
         { id: 'pepsi-max', name: 'Pepsi Max', price: 1.50, img: 'images/pepsimax1.jpg', allergens: [] },
         { id: 'pepsi', name: 'Pepsi', price: 1.75, img: 'images/pepsi.jpg', allergens: [] },
         { id: 'sprite-zero', name: 'Sprite Zero',  price: 1.50, img: 'images/spritezero.jpg', allergens: [] },
-        { id: 'fanta-orange', name: 'Fanta/Tango Orange', price: 1.75, img: 'images/fanta.jpg', allergens: [] },
+        { id: 'fanta-orange', name: 'Fanta Orange', price: 1.75, img: 'images/fanta.jpg', allergens: [] },
 		 { id: 'lemonade', name: 'Lemonade', price: 1.75, img: 'images/sprite.jpg', allergens: [] },
       ]},	  
     ];
@@ -5131,4 +5131,5 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
 
