Switching off temp kitchen closure message

--- a/index.html
+++ b/index.html
@@ -2794,7 +2794,7 @@ applyHeaderOffset();
 
 		// Simple config object (edit this anytime)
 		const siteStatus = {
-		  active: true,  // turn off when not needed
+		  active: false,  // turn off when not needed
 		  message: "Unfortunately, due to illness, Rung’s Thai Kitchen will be closed today (14th December). We are very sorry for any inconvenience this may cause."
 
 		};
@@ -5326,3 +5326,4 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </body>
 </html>
+
