--- a/index.html
+++ b/index.html
@@ -5168,7 +5168,7 @@ console.log = console.info = console.debug = console.warn = console.error = cons
 
 // ---- Temporary closure override (edit when needed) ----
 const tempClosure = {
-  active: true, // ✅ set true when temporarily closed
+  active: false, // ✅ set true when temporarily closed
   title: "Temporarily closed",
   message: "Unfortunately, due to illness, Rung’s Thai Kitchen will be closed today (14th December). We are very sorry for any inconvenience this may cause.",
   // Optional reopen time shown to customers (UK local time)
