--- a/index.html
+++ b/index.html
@@ -2035,7 +2035,7 @@ body.overlay-open {
 
 					<h2 id="kitchen-notice-title">Kitchen Closed Today</h2>
 					<p class="kitchen-notice-main">
-					  Rung's Thai Kitchen is closed today and will re-open at <strong>17:00 on Wednesday</strong>. Please feel free to view the menu and place a pre-order for a day when we are open
+					  Rung's Thai Kitchen is closed today. Opening days are <strong>Weds to Sun, 17:00 to 21:00.</strong> Please feel free to view the menu and place a pre-order for a day when we are open.
 					</p>
 					<button type="button" id="kitchen-notice-close" class="kitchen-notice-close">
 					  Continue to website
