--- a/index.html
+++ b/index.html
@@ -2124,24 +2124,22 @@ body.overlay-open {
   padding: 6px 10px;
 }
 
-.modal-body {
-  height: calc(100% - 52px);
-}
-
 .modal-iframe {
   width: 100%;
   height: 100%;
   border: 0;
 }
 
-body.modal-open {
-  position: fixed;
-  width: 100%;
-}
-
 .modal-overlay.is-open {
   touch-action: none;
 }
+
+.modal-body {
+  height: calc(100% - 52px);
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
 
 
 </style>
@@ -5520,21 +5518,12 @@ document.addEventListener("DOMContentLoaded", () => {
 
     if (!openBtn || !modal || !overlay || !closeBtn) return;
 
-    let scrollY = 0;
-
     function openModal(e) {
-      if (e) e.preventDefault();
-
-      // Save scroll position and lock body (mobile-safe)
-      scrollY = window.scrollY || 0;
-      document.body.classList.add("modal-open");
-      document.body.style.top = `-${scrollY}px`;
-
+      e.preventDefault();
       modal.classList.add("is-open");
       overlay.classList.add("is-open");
       modal.setAttribute("aria-hidden", "false");
       overlay.setAttribute("aria-hidden", "false");
-
       closeBtn.focus();
     }
 
@@ -5543,12 +5532,6 @@ document.addEventListener("DOMContentLoaded", () => {
       overlay.classList.remove("is-open");
       modal.setAttribute("aria-hidden", "true");
       overlay.setAttribute("aria-hidden", "true");
-
-      // Unlock body and restore scroll position
-      document.body.classList.remove("modal-open");
-      document.body.style.top = "";
-      window.scrollTo(0, scrollY);
-
       openBtn.focus();
     }
 
@@ -5563,6 +5546,7 @@ document.addEventListener("DOMContentLoaded", () => {
     });
   })();
 </script>
+
 
 
 
