--- a/index.html
+++ b/index.html
@@ -2016,53 +2016,45 @@ body.overlay-open {
   animation-play-state: paused;
 }
 
-.header-banner {
+/* The banner box */
+#headerBanner.header-banner {
+  display: block;
   position: relative;
   overflow: hidden;
+
   padding: 12px 16px;
   color: #fff;
   font-weight: 600;
   text-align: center;
 
-  /* Keep your existing look here */
   background: linear-gradient(90deg, #0a7a3d 0%, #b0151b 100%);
   border-radius: 2px;
 }
 
-.banner-slide {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  opacity: 0;
-  transition: opacity 450ms ease;
-  padding: 0 10px;
+/* Slides: keep in normal flow, just show/hide */
+#headerBanner .banner-slide {
+  display: none;
+  white-space: normal;
+  line-height: 1.25;
 }
 
-.banner-slide.is-active {
-  opacity: 1;
-  position: relative; /* makes the active slide take height */
+#headerBanner .banner-slide.is-active {
+  display: block;
 }
 
-@media (prefers-reduced-motion: reduce) {
-  .banner-slide {
-    transition: none;
-  }
-}
-
-.banner-link {
+/* Link styling */
+#headerBanner .banner-link {
   color: #fff;
   text-decoration: underline;
   font-weight: 700;
-  white-space: nowrap;
 }
 
-.banner-link:hover,
-.banner-link:focus {
+#headerBanner .banner-link:hover,
+#headerBanner .banner-link:focus {
   text-decoration: none;
   opacity: 0.9;
 }
+
 
 .modal-overlay {
   position: fixed;
